RESOLVED FIXED 266462
[WebGPU] CTS test validation/buffer/create.html is failing
https://bugs.webkit.org/show_bug.cgi?id=266462
Summary [WebGPU] CTS test validation/buffer/create.html is failing
Mike Wyrzykowski
Reported 2023-12-14 23:32:11 PST
[WebGPU] CTS tests validation/buffer/mapping.html and validation/buffer/create.html are failing
Attachments
Radar WebKit Bug Importer
Comment 1 2023-12-14 23:32:28 PST
Mike Wyrzykowski
Comment 2 2023-12-15 13:36:41 PST
EWS
Comment 3 2023-12-28 14:47:52 PST
Committed 272524@main (55fa6352bcf6): <https://commits.webkit.org/272524@main> Reviewed commits have been landed. Closing PR #21884 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.