[WebGPU] CTS test validation/buffer/create.html is failing https://bugs.webkit.org/show_bug.cgi?id=266462 <radar://119708170>

Reviewed by Tadeu Zagallo.

Passing invalid flags should result in a device error so instead of using an
option set which may remove invalid flags, pass the direct value the from the JS
layer and perform validation in WebGPU.framework

* LayoutTests/http/tests/webgpu/webgpu/api/validation/buffer/create-expected.txt:
Add passing expectations.

* Source/WebCore/Modules/WebGPU/GPUBufferUsage.h:
(WebCore::compare):
(WebCore::convertBufferUsageFlagsToBacking):

* Source/WebCore/Modules/WebGPU/GPUDevice.cpp:
(WebCore::GPUDevice::createBuffer):
Range error should only be thrown when mappedAtCreation == true

* Source/WebCore/Modules/WebGPU/Implementation/WebGPUConvertToBackingContext.cpp:
(WebCore::WebGPU::compare):
(WebCore::WebGPU::ConvertToBackingContext::convertBufferUsageFlagsToBacking):
* Source/WebCore/Modules/WebGPU/InternalAPI/WebGPU.serialization.in:
* Source/WebCore/Modules/WebGPU/InternalAPI/WebGPUBufferUsage.h:

* Source/WebGPU/WebGPU/Buffer.mm:
(WebGPU::validateCreateBuffer):
Make sure flags are within range.

Canonical link: https://commits.webkit.org/272524@main